Tambahkan script untuk menginstall depedencies python

--- a/Computer Problem Set 5.2-3.interpolasi-newton-beda-maju.ipynb
+++ b/Computer Problem Set 5.2-3.interpolasi-newton-beda-maju.ipynb
@@ -4,6 +4,29 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## Install Library"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Run this script to install required depedencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install -r https://raw.githubusercontent.com/harysetiawan23/training-numeric-computing/master/requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## Helper Function"
    ]
   },
