--- a/Computer Problem Set 4.5-1b.iterasi-gauss-seidel copy.ipynb
+++ b/Computer Problem Set 4.5-1b.iterasi-gauss-seidel copy.ipynb
@@ -11,6 +11,22 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Run this script to install required depedencies"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "pip install -r https://raw.githubusercontent.com/harysetiawan23/training-numeric-computing/master/requirements.txt"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "#### Define the polynom system\n",
     "\n",
     "```\n",
